force-app/main/default/objects/Employee__c/fields/Indian_Address__c.field-meta.xml
<CustomField>
    <fullName>Indian_Address__c</fullName>
    <label>Indian Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>