force-app/main/default/objects/Employee__c/fields/Manager_Fields__c.field-meta.xml
<CustomField>
    <fullName>Manager_Fields__c</fullName>
    <formula>Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Fields</label>
    <type>Text</type>
</CustomField>