force-app/main/default/objects/Employee__c/fields/Pakistani_Addres__c.field-meta.xml
<CustomField>
    <fullName>Pakistani_Addres__c</fullName>
    <label>Pakistani Addres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>