force-app/main/default/objects/Employee__c/fields/Us_Address__c.field-meta.xml
<CustomField>
    <fullName>Us_Address__c</fullName>
    <label>Us Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>