force-app/main/default/objects/Employee__c/recordTypes/Indian_employee.recordType-meta.xml
<RecordType>
    <fullName>Indian_employee</fullName>
    <active>true</active>
    <label>Indian employee</label>
</RecordType>