force-app/main/default/objects/Employee__c/recordTypes/Pakitani_Employee.recordType-meta.xml
<RecordType>
    <fullName>Pakitani_Employee</fullName>
    <active>true</active>
    <label>Pakitani Employee</label>
</RecordType>