force-app/main/default/objects/Employee__c/recordTypes/Us_Employee.recordType-meta.xml
<RecordType>
    <fullName>Us_Employee</fullName>
    <active>true</active>
    <label>Us Employee</label>
</RecordType>