force-app/main/default/objects/Employee__c/validationRules/Check_IF_DOB_is_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_IF_DOB_is_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>DOB__c &gt;=   TODAY()</errorConditionFormula>
    <errorMessage>Invalid DOB</errorMessage>
</ValidationRule>